video on mobile + resp. fix + nav color

--- a/themes/lgrcia/static/css/style.css
+++ b/themes/lgrcia/static/css/style.css
@@ -83,6 +83,7 @@ margin-top: -10rem;
 
 /* NAV */
 
+a {color: var(--black)}
 a:link { text-decoration: none; }
 a:visited { text-decoration: none; color: var(--black)}
 a:hover { text-decoration: none; }
